data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1150.wast
;; ### List of Differential Test Descriptions for Edge Case Failures in br_table  1. **Test Description**:    - Create a `loop` that contains a `br_table` with an index that is one less than the number of possible targets.    - **Constraint**: Ensures that implementations correctly handle the upper boundary of the index range.    - **Edge Case**: Validates the correct branching to the last valid target.

(assert_invalid
  (module 
    (func $edge-case-br_table
      (loop
        (block $target0 (local.get 0) (br_table $target0 (i32.const 1)))
      )
    )
  )
  "type mismatch"
)